Rename 'gracePeriodDays' to 'paymentStartDelayDays' across the codebase for consistency.